--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -1,13 +1,33 @@
-@model IEnumerable<PostModel>
+@model PostsViewModel
 
 
 <div class="container">
 
-    @foreach (var post in Model)
+    @foreach (var post in Model.Posts)
     {
-        <h1 class="mt-5"><a asp-controller="Posts" asp-action="Post" asp-route-id="@post.Locator">@post.Title</a></h1>
+        <div class="row">
+            <div class="col-sm-12">
 
-        @Html.Raw(post.Content)
+                <h1 class="mt-5"><a asp-controller="Posts" asp-action="Post" asp-route-id="@post.Locator">@post.Title</a></h1>
+
+                @Html.Raw(post.Content)
+            </div>
+        </div>
+
     }
 
+    <div class="row">
+        <div class="col-sm-6">
+            @if (Model.CurrentPage < Model.PageCount)
+            {
+                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
+            }
+        </div>
+        <div class="col-sm-6 text-right">
+            @if (Model.CurrentPage > 1)
+            {
+            <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
+            }
+        </div>
+    </div>
 </div>
