--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,7 +11,7 @@ body {
     /* Move down content because we have a fixed navbar that is 3.5rem tall */
     padding-top: 3.5rem;
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    margin-bottom: 4.5rem;
     font-family: 'Montserrat', sans-serif !important;
 }
 
@@ -30,6 +30,6 @@ h2 a, h2 a:active, h2 a:visited, h2 a:hover {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
+    height: 3.5rem;
     background-color: #f5f5f5;
 }
