--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-sm-10">
                     <h1 class="display-3">Deferat</h1>
-                    <p class="lead">The blog of James Naylor</p>
+                    <p class="lead">James Naylor's Programming Blog</p>
                 </div>
             </div>
             
