--- a/Views/Shared/_Post.cshtml
+++ b/Views/Shared/_Post.cshtml
@@ -1,8 +1,13 @@
 @model Post
 
 <div class="row convert-emoji">
+    <div class="col-sm-12 text-center">
+        <h1><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Id" class="display-4">@Model.Title</a></h1>
+    </div>
+</div>
+<div class="row convert-emoji mt-4">
     <div class="col-sm-2">
-        <div class="text-right mt-2">
+        <div class="text-right">
             @Model.Date.ToShortDateString()<br />  
             <span class="font-weight-bold">@Model.Author</span><br />
             @foreach (var tag in Model.Categories)
@@ -16,7 +21,6 @@
     </div>
     <div class="col-sm-10 article">
 
-        <h1><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Id" class="display-4">@Model.Title</a></h1>
         @if (ViewData["Short"] != null)
         {
             @Html.Raw(Model.ShortContent)
